syntax = "proto3";

package k1s0.system.ratelimit.v1;

option go_package = "github.com/k1s0-platform/system-proto-go/ratelimit/v1;ratelimitv1";

import "google/protobuf/timestamp.proto";
import "k1s0/system/common/v1/types.proto";

// RateLimitService は API レート制限サービス。
// スライディングウィンドウ・トークンバケット等のアルゴリズムをサポートする。
service RateLimitService {
  // CheckRateLimit はリクエストがレートリミットに引っかかるか確認する。
  rpc CheckRateLimit(CheckRateLimitRequest) returns (CheckRateLimitResponse);
  // CreateRule は新しいレートリミットルールを作成する。
  rpc CreateRule(CreateRuleRequest) returns (CreateRuleResponse);
  // GetRule はルールIDでルール情報を取得する。
  rpc GetRule(GetRuleRequest) returns (GetRuleResponse);
  // GetUsage はレートリミットの使用状況を取得する。
  rpc GetUsage(GetUsageRequest) returns (GetUsageResponse);
  // ResetLimit はレートリミットの状態をリセットする。
  rpc ResetLimit(ResetLimitRequest) returns (ResetLimitResponse);
}

message CheckRateLimitRequest {
  string rule_id = 1;
  string subject = 2;
}

message CheckRateLimitResponse {
  bool allowed = 1;
  int64 remaining = 2;
  int64 reset_at = 3;
  string reason = 4;
}

message CreateRuleRequest {
  string name = 1;
  string key = 2;
  int64 limit = 3;
  int64 window_secs = 4;
  string algorithm = 5;
}

message CreateRuleResponse {
  RateLimitRule rule = 1;
}

message GetRuleRequest {
  string rule_id = 1;
}

message GetRuleResponse {
  RateLimitRule rule = 1;
}

message RateLimitRule {
  string id = 1;
  string name = 2;
  string key = 3;
  int64 limit = 4;
  int64 window_secs = 5;
  string algorithm = 6;
  bool enabled = 7;
  google.protobuf.Timestamp created_at = 8;
}

message GetUsageRequest {
  string rule_id = 1;
}

message GetUsageResponse {
  string rule_id = 1;
  string rule_name = 2;
  int64 limit = 3;
  int64 window_secs = 4;
  string algorithm = 5;
  bool enabled = 6;
}

message ResetLimitRequest {
  string scope = 1;
  string identifier = 2;
}

message ResetLimitResponse {
  bool success = 1;
}
